--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.0",
+    "lodash": "4.17.4",
     "mongoose": "^4.10.7",
     "util": "^0.10.3"
   }
