#add 增加用户注销功能；增加redis记录失效token

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^4.10.7",
     "require_optional": "^1.0.1",
     "util": "^0.10.3"
+  },
+  "devDependencies": {
+    "redis": "^2.7.1"
   }
 }
