#add 增加微信jssdk接口验证;

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "bson": "^1.0.4",
+    "co-wechat": "^2.0.0",
     "concurrency-logger": "^2.0.1",
     "glob": "^7.1.2",
     "jsonwebtoken": "^7.4.1",
