--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-jwt": "^3.2.2",
     "koa-router": "^7.2.0",
+    "koa-static": "^4.0.1",
     "lodash": "4.17.4",
     "mongoose": "^4.10.7",
     "require_optional": "^1.0.1",
