--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "koa-router": "^7.2.0",
     "koa-static": "^4.0.1",
     "lodash": "4.17.4",
+    "moment": "^2.18.1",
     "mongoose": "^4.10.7",
-    "require_optional": "^1.0.1",
     "util": "^0.10.3"
   },
   "devDependencies": {
-    "redis": "^2.7.1"
+    "redis": "^2.7.1",
+    "require_optional": "^1.0.1"
   }
 }
