--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-jwt": "^3.2.2",
+    "koa-multer": "^1.0.2",
     "koa-router": "^7.2.0",
     "koa-static": "^4.0.1",
     "lodash": "4.17.4",
